update to html lab

--- a/labs/html example/index.html
+++ b/labs/html example/index.html
@@ -11,5 +11,17 @@
 <body>
     <h1>Hello</h1>
     <p>I am a cool web page, WOW!</p>
+    <a href="https://www.google.com">Go to Google!</a>
+    <div>
+        <img src="https://media.giphy.com/media/5KjcaTk9B0oZG/giphy.gif" alt="Tron gif">
+    </div>
+    <div>
+        <button>THIS BUTTON DOES NOTHING!</button>
+    <div>
+        <input type="text" placeholder="Username: ">
+        <input type="password" placeholder="Password: ">
+    </div>
+    
+    </div>
 </body>
 </html>
